# wasmi-enclave

./: .gitignore  Makefile
app/: Cargo.toml
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: lib.rs
simplest_wasm/: Cargo.toml  contract.wasm
simplest_wasm/src/: lib.rs
